--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .bg-image {
+    background: url("assets/images/signup/bg-01.jpg");
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    background-color: aqua;
+    position: relative;
+    z-index: 1;
+  }
+
+  .bg-image::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background: -webkit-linear-gradient(
+      left,
+      rgba(0, 168, 255, 0.5),
+      rgba(185, 0, 255, 0.5)
+    );
+  }
+}
