--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,10 @@
 @tailwind utilities;
 
 @layer base {
-  body {
-    width: 100vw;
-    height: 100vh;
+
+  body{
+    width:100%;
+    height:100vh;
   }
 
   .bg-image {
@@ -33,5 +34,12 @@
       rgba(0, 168, 255, 0.5),
       rgba(185, 0, 255, 0.5)
     );
+  }
+
+  .active{
+     @apply bg-[#333A48]
+  }
+  :root {
+    --radius:0.5rem;
   }
 }
