--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@
   }
 
   .input_form{
-    @apply w-full font-medium p-2 rounded-lg transition-all border bg-gray-800 border-gray-500 focus:border-blue-500 outline-none text-white;
+    @apply w-full font-medium p-2 rounded-lg transition-all border bg-white dark:bg-gray-800 text-black border-gray-500 focus:border-blue-500 outline-none dark:text-white;
   }
 
   :root {
